# rust-supertokens-kit

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  playground.rest
backend/: Cargo.toml
backend/src/: auth.rs  main.rs
frontend/: .env.example  next.config.js  package-lock.json
frontend/config/: appInfo.ts  backendConfig.ts  frontendConfig.tsx
frontend/pages/: index.tsx
migrations/: 20230522053601_create-users-table.sql  20230522085023_create-sessions-table.sql  20230527063541_add-password-hash-to-users.sql
src/: auth.rs  main.rs  oauth2.rs  token.rs
web/: .prettierrc  package.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/components/: UserMenu.tsx
web/src/lib/: user.ts
