[package]
name = "baselab01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
axum-sessions = "0.5.0"
cookie = "0.17.0"
dotenv = "0.15.0"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = [ "json" ] }
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "uuid", "time", "json" ] }
tokio = { version = "1.28.1", features = [ "full" ] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = [ "fs" ] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.3.3", features = [ "v4", "serde" ] }
