[package]
name = "rustpoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
dotenv = "0.15.0"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = [ "json" ] }
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
